--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -65,7 +65,7 @@ Descargar:
   <tr>
     <td class="span4"><%= article.barcode %></td>
     <td class="span4"><%= article.name %></td>
-    <td class="span4"><%= article.supplier.name.nil? "" : article.supplier.name %></td>
+    <td class="span4"><%= article.supplier_id.nil? ? "" : article.supplier.name %></td>
     <td class="label label-info span2 center"><%= number_to_currency(article.price_total) %></td>
     <td class="center span2"><%= article.quantity %></td>
     <% if can? :show, @articles %>
