cambios de remitos

--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -9,7 +9,7 @@
   <b>Precio total:</b>
   <%= @invoice.price_total %>
   </p>
-    <%= link_to "Volver", customer_invoices_path(@customer.id) %>
+    <%= link_to "Volver", invoices_path() %>
   
   
 
