--- a/app/views/invoices/_form.html.erb
+++ b/app/views/invoices/_form.html.erb
@@ -1,9 +1,20 @@
-<%= simple_form_for [@customer, @invoice] do |f| %>
+<%= simple_form_for(@invoice) do |f| %>
    <%= f.error_notification %>
 <div> 
-   <div class="side">
-      <h4> Cliente: <%= @customer.name + ", " + @customer.lastname %></h4>
-      <div class="span2">
+   <div >
+
+      <div class="span3 side">
+         <%= simple_form_for '', method: 'get' do |f| %>
+            <div class="search">
+            <%= f.input( :q, label: 'Clientes', input_html: { 
+               data: {'autocomplete-field' => true,
+                      'autocomplete-for' => '#_customer_id',
+                      'autocomplete-url' => customers_path(format: :json)
+            } 
+            }) %>
+         <%= f.input :customer_id, as: :hidden%>
+         </div>
+      <% end %> 
          <%= f.input :current_account,  label: "Cuenta corriente"%>
       </div>
    </div>
