--- a/app/views/invoices/index.html.erb
+++ b/app/views/invoices/index.html.erb
@@ -1,6 +1,5 @@
 <h3>Listado de Remitos</h3>
 
-<h4>Clientes: <%= @customer.name + ",  " +  @customer.lastname %></h4>
 <table class="table">
   <tr>
     <th>Remito</th>
@@ -22,10 +21,10 @@
     <td></td>
     <td><%=  invoice.current_account ? 'Si' : 'No' %> </td>
     <td> <%= invoice.cancelar_invoice ? "  <b> 'Cancelado' </b> ": 'No Cancelado' if invoice.current_account == true %></td>
-    <td><%= link_to "Editar", edit_customer_invoice_path(invoice.customer_id, invoice) %></td>
-    <td><%= link_to "Imprimir", customer_invoice_path(invoice.customer_id, invoice, format: "pdf") %></td>
-    <td><%= link_to "Cancelar", customer_invoice_cancelar_path(invoice.customer_id, invoice) %></td>
-    <td><%= link_to "Actualizar precio", customer_invoice_update_invoice_path(invoice.customer_id, invoice) %></td>
+    <td><%= link_to "Editar", edit_invoice_path(invoice) %></td>
+    <td><%= link_to "Imprimir", invoice_path( invoice, format: "pdf") %></td>
+    <td><%= link_to "Cancelar", invoice_cancelar_path(invoice) %></td>
+    <td><%= link_to "Actualizar precio",invoice_update_invoice_path( invoice) %></td>
     </tr>
 <% end %>
 
@@ -44,4 +43,4 @@
 
 <br />
 
-<%= link_to 'Nuevo Remito', new_customer_invoice_path() %>
+<%= link_to 'Nuevo Remito', new_invoice_path() %>
