--- a/app/views/invoices/_form.html.erb
+++ b/app/views/invoices/_form.html.erb
@@ -12,7 +12,7 @@
                       'autocomplete-url' => customers_path(format: :json)
             } 
             }) %>
-         <%= f.input :customer_id, as: :hidden%>
+         <%= f.input :customer_id, as: 'hidden'%>
          </div>
       <% end %> 
          <%= f.input :current_account,  label: "Cuenta corriente"%>
