--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -53,6 +53,7 @@
                                                 <td><%= customer.description %></td>
                                                 <td><%= link_to t('labels.show'), customer %></td>
                                                 <td><%= link_to t('labels.edit'), edit_customer_path(customer) %></td>
+                                                <td><%= link_to 'Historial', store_customers_path(customer) %></td>
                                                 <td><% link_to t('labels.destroy'), customer, method: :delete, data: { confirm: t('labels.are_you_sure') } %></td>
                                         </tr>
                                 <% end %>
