--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -69,7 +69,8 @@ Descargar:
     <td class="center span2"><%= article.quantity %></td>
     <% if can? :show, @articles %>
        <td class="span1"><%= link_to 'Ver', article %></td>
-    <td class="span1"><%= link_to 'Editar', edit_article_path(article) %></td>
+      <td class="span1"><%= link_to 'Editar', edit_article_path(article) %></td>
+         <td><%= link_to t('labels.destroy'), article, method: :delete, data: { confirm: t('labels.are_you_sure') } %></td>
  <% end %>
  <% end %>
  </tr>
