lector de barra

--- a/lib/app/assets/stylesheets/invoices.css.scss
+++ b/lib/app/assets/stylesheets/invoices.css.scss
@@ -1,4 +1,13 @@
 
+.sectionx{
+  float: left;
+  background:#FaFaFa ;
+  height: 520px;
+  width: 76%;
+  border: 1px solid #E1E1E1;
+  padding: 3px;
+  overflow: auto;
+}
 .section2
 {
   height: 430px;
