--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -10,6 +10,7 @@
   <%= @invoice.price_total %>
   </p>
     <%= link_to "Volver", invoices_path() %>
+    <%= link_to "Imprimir", invoice_path(@invoice, format: "pdf") %>
   
   
 
