--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -21,7 +21,8 @@
                 <% end %>
                 </div>       
                 <div class = "span6">
-                    <%= f.input :barcode, label: "Codigo de Barra" %>
+                   <%= f.input :barcode, label: "Codigo de Barra" %>
+                   <%= f.button :generate, label:"generate" %>
                     <%= f.input :articles_code_supplier, label: "Codigo Articulo Proveedor" %>
                     <%= f.label "Marca" %>
                     <%= f.collection_select :make_id, Make.order(:name), :id, :name %>
