--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,6 +11,8 @@
  *= require_self
  *= require twitter/bootstrap
  *= require twitter/bootstrap-responsive
+ *= require twitter/bootstrap-theme
+ *= require twitter/dashboard
  *= require login
  *= require customers
  *= require invoices
