--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for(@article) do |f| %>
+<%= simple_form_for @article, defaults:{input_html:{class: 'form-control'}} do |f| %>
     <%= f.error_notification %>
 <div class="container">
     <div class="form-inputs">
@@ -26,16 +26,16 @@
                     <%= f.label "Marca" %>
                     <%= f.collection_select :make_id, Make.order(:name), :id, :name %>
                     o crea un
-                    <%= f.text_field :new_make  %><br>
+                    <%= f.input :new_make, label: false  %><br>
 
                     <%= f.label "Proovedor" %>
                     <%= f.collection_select :supplier_id, Supplier.order(:name), :id, :name %>
                     o crea un
-                    <%= f.text_field :new_supplier  %><br>
+                    <%= f.input :new_supplier, label: false  %><br>
                     <%= f.label "Categoria" %>
                     <%= f.collection_select :category_id, Category.order(:name), :id, :name %>
                     o crea una
-                    <%= f.text_field :new_category  %>
+                    <%= f.input  :new_category, label: false, class: 'col-xs-3'  %>
                 </div>
             </div>
         </div>
