--- a/app/views/customers/_form.html.erb
+++ b/app/views/customers/_form.html.erb
@@ -1,16 +1,16 @@
-<%= simple_form_for @customer, :defaults =>{:input_html => {:class => 'span10'}} do |f| %>
+<%= simple_form_for @customer do |f| %>
   <div class="container"> 
     <div class="form-inputs">
       <div class="row-fluid">
   <%= f.error_notification %>
   <div class="span5">
-    <%= f.input :name, :required=> true, :autofocus=>true %>
-    <%= f.input :lastname,   :required=> true, :hint => 'no special characteres' %>
-    <%= f.input :address,  :required=> true %>
-    <%= f.input :neighborhood%>
+     <%= f.input :name, :required=> true, :autofocus=>true, :input_html=> {class: 'form-control'} %>
+    <%= f.input :lastname,   :required=> true, :hint => 'no special characteres' , :input_html=> {class: 'form-control'} %>
+    <%= f.input :address,  :required=> true , :input_html=> {class: 'form-control'} %>
+    <%= f.input :neighborhood , :input_html=> {class: 'form-control'} %>
 
     <div class="fields">
-    <%= f.simple_fields_for :phones do |ph| %>
+       <%= f.simple_fields_for :phones, :input_html=>{class: 'form-inline'} do |ph| %>
        <%=render 'phones', f: ph  %>
      <% end %>
   <%= link_to_add_fields t('view.customers.add_phones'), f , :phones %>
@@ -18,14 +18,14 @@
   </div>
 
   <div class="span5">
-    <%= f.input :email,  placeholder: 'user@domain.com'%>
-    <%= f.input :dni%>
+    <%= f.input :email,  placeholder: 'user@domain.com', :input_html=> {class: 'form-control'} %>
+    <%= f.input :dni, :input_html=> {class: 'form-control'} %>
           <%= f.input :location_id do %>
            <%= f.collection_select :location_id,  Location.order(:name), :id, :name, class: "span3" %>
-           o Crear una <%=f.text_field :new_location , class: "span3" %>
+           o Crear una <%=f.input :new_location , label: false, :input_html=> {class: 'form-control'} %>
    <% end  %>
-   <%= f.input :description, :input_html => {:rows => 3}%>
-    <%= f.input :cuit%>
+   <%= f.input :description, :input_html => {:rows => 3, :class=> 'form-control'}%>
+   <%= f.input :cuit, input_html: { class:'form-control'}  %>
    </div>
 </div>
 </div>
