--- a/app/views/invoices/_orders.html.erb
+++ b/app/views/invoices/_orders.html.erb
@@ -1,19 +1,33 @@
-<tbody class="table">
-<tr>
-   <td class="span3"> <%= f.input( :name, label: false, input_html: { 
-                        data: {'autocomplete-field' => true,
-                               'autocomplete-for' => '#invoice_orders_#{id}_articles_id',
-                               'autocomplete-url' => articles_path(format: :json)
-                } 
-                }) %>
-        <%= f.input :articles_id, as: :hidden, label: false%>
-        <%= f.input :quantity_stock, as: :hidden , label: false%></td>
-<td class="span2"> <%= f.input :quantity, label: false, :input_html => {:class => "input-small quantity"}, as: :string  %> </td>
-<td class="span2"> <%= f.input :unit_price, label: false, :input_html => {:class => "input-small"}, as: :string  %></td>
+<div class="col-md-12">
+   <div class="col-md-3 order" id="order">
+      <%= f.input( :name, label: false,  input_html: {
+         class: 'form-control ',
+         data: {'autocomplete-field' => true,
+                'autocomplete-for' => '#invoice_orders_#{id}_articles_id',
+                'autocomplete-url' => articles_path(format: :json)
+      } 
+      }) %>
+   <%= f.input :articles_id, as: :hidden, label: false%>
+      <%= f.input :quantity_stock, as: :hidden , label: false%>
+   </div>
+   <div class=" col-md-1">
+      <%= f.input :quantity, label: false, as: :string, :input_html => {:class => "form-control quantity"}  %>
+   </div>
+   <div class="col-md-2">
 
-          <td class="span2"> <%= f.input :discount, label: false, :input_html => {:class => "input-small discount "}, as: :string %></td>
-          <td class="span2"> <%= f.input :price_total, label: false, :input_html => {:class => "input-small price_subtotal"}, as: :string %></td>
-          <td><%= f.hidden_field :_destroy %></td>
-          <td><%= button_to "Eliminar", '#', class: "remove_fields_orders btn btn-danger" %></td>
-  </tr>
-  </tbody>
+      <%= f.input :unit_price, label: false, :input_html => {:class => "form-control"}  %>
+   </div>
+   <div class=" col-md-1">
+      <%= f.input :discount, label: false, as: :string, :input_html => {:class => "form-control discount "} %>
+   </div>
+   <div class=" col-md-1">
+      <%= f.input :price_total, label: false, as: :string, :input_html => {:class => "form-control price_subtotal"} %>
+   </div>
+   <div class="col-md-1">
+      <%if current_user.role == 'Admin' %>
+         <%= f.hidden_field :_destroy %>
+      <%= button_to "Eliminar", '#', class: "remove_fields_orders btn btn-danger form-control" %>
+   <% end %>
+   </div>
+
+</div>
