--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
-    <meta name= "viewport" charset="utf-8" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>Sistema Gestion 1.0</title>
     <%= stylesheet_link_tag    "application", :media => "all" %>
     <%= javascript_include_tag "application" %>
@@ -10,7 +10,7 @@
   </head>
   <body>
         <%if user_signed_in?%>
-          <%= render "layouts/menu" %>
+          <%= render "layouts/menu2" %>
           <div>
             <%= yield %>
           </div>
