--- a/lib/app/views/invoices/_form.html.erb
+++ b/lib/app/views/invoices/_form.html.erb
@@ -1,55 +1,67 @@
 <%= simple_form_for [@customer, @invoice] do |f| %>
-        <%= f.error_notification %>
-        <div> 
-                <div class="side">
+   <%= f.error_notification %>
+<div> 
+   <div class="side">
 
-                        <h4> Cliente: <%= @customer.name + ", " + @customer.lastname %></h4>
+      <h4> Cliente: <%= @customer.name + ", " + @customer.lastname %></h4>
 
-                        <div class="span2">
-                                <%= f.input :current_account,  label: "Cuenta corriente"%>
-                        </div>
-                </div>
-                <div class="section">
-                        <div class="container-fluid center ">
-                                <table class="table ">
-                                        <tr>
-                                                <th class="span2">Articulos</th>
-                                                <th class="span2">Cantidad</th>
-                                                <th class="span1">Precio Unit</th>
-                                                <th class="span1">Descuento</th>
-                                                <th class="span1">Precio Total</th>
-                                        </tr>
+      <div class="span2">
+         <%= f.input :current_account,  label: "Cuenta corriente"%>
+      </div>
+   </div>
+   <div class="section">
+      <div class="container-fluid center ">
 
-                                        <%= f.fields_for :orders, method: 'get' do |ph| %>
-                                                <%=render 'orders', f: ph  %>
-                                        <% end %>
+         <div>Articles</div>
+         <div>Cantidad</div>
+         <div>Precio Unit</div>
+         <div>Descuento</div>
+         <div>Precio Total</div>
+      </div>
 
-                                </table>
-                                <div>
-                                        <tr>
-                                                <td>     <%= link_to_add_fields 'Agregar  Item', f , :orders %></td>
+   </div>
 
-                                        </tr>
-                                </div>
 
-                                <div class ="total_1 pull-right h2">
-                                        <h2>  Total</h2>
-                                        <h2><%=f.input :price_total, label: false, :input_html=> {class: "input-small"}, readonly: true %></h2>
-                                </div>
-                                <br>
-                                <div class="span10">
-                                        <%= f.fields_for :payments, method: 'get' do |pay| %>
-                                                <%= render 'payments', f: pay %>
-                                        <% end %>
-                                        <div class="span10 pull-right">
-                                                <%= link_to_add_fields 'Agregar Pago', f , :payments %>
-                                        </div>
-                                </div>
-                        </div>
 
-                                <div class="form-actions">
-                                        <%= f.button :submit %>
-                                </div>
-                </div>
-        </div>
+         <table class="table ">
+            <tr>
+               <th class="span2">Articulos</th>
+               <th class="span2">Cantidad</th>
+               <th class="span1">Precio Unit</th>
+               <th class="span1">Descuento</th>
+               <th class="span1">Precio Total</th>
+            </tr>
+
+            <%= f.fields_for :orders, method: 'get' do |ph| %>
+               <%=render 'order', f: ph  %>
+         <% end %>
+
+         </table>
+         <div>
+            <tr>
+               <td><%= link_to_add_fields 'Agregar  Item', f , :orders %></td>
+
+            </tr>
+         </div>
+
+         <div class ="total_1 pull-right h2">
+            <h2>  Total</h2>
+            <h2><%=f.input :price_total, label: false, :input_html=> {class: "input-small"}, readonly: true %></h2>
+         </div>
+         <br>
+         <div class="span10">
+            <%= f.fields_for :payments, method: 'get' do |pay| %>
+               <%= render 'payments', f: pay %>
+         <% end %>
+            <div class="span10 pull-right">
+               <%= link_to_add_fields 'Agregar Pago', f , :payments %>
+            </div>
+         </div>
+      </div>
+
+      <div class="form-actions">
+         <%= f.button :submit %>
+      </div>
+   </div>
+</div>
 <% end %>
