--- a/lib/app/views/invoices/_orders.html.erb
+++ b/lib/app/views/invoices/_orders.html.erb
@@ -1,6 +1,7 @@
 <tbody class="table">
 <tr>
-                <td class="span3"> <%= f.input( :name, label: false, input_html: { 
+   <td class="span3"> <%= f.input( :name, label: false,  input_html: {
+                        class: 'form-control',
                         data: {'autocomplete-field' => true,
                                'autocomplete-for' => '#invoice_orders_#{id}_articles_id',
                                'autocomplete-url' => articles_path(format: :json)
