--- a/lib/app/views/layouts/application.html.erb
+++ b/lib/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
   </head>
   <body>
         <%if user_signed_in?%>
-          <%= render "layouts/menu" %>
+          <%= render "layouts/menu2" %>
           <div>
             <%= yield %>
           </div>
