--- a/app/views/invoices/_form.html.erb
+++ b/app/views/invoices/_form.html.erb
@@ -1,51 +1,56 @@
 <%= simple_form_for @invoice, defaults: {input_html:{class: 'form-inline'}} do |f| %>
-   <%= f.error_notification %>
-<div class="col-md-12"> 
+
+   <div class="col-md-12"> 
    <div class="form-group">
       <div class="col-md-2 sidebar">
-         <%= simple_form_for '', method: 'get' do |f| %>
-            <div class="search col-mod-4">
-            <%= f.input( :q, label: 'Clientes', input_html: {
-               class: 'form-control',
-               data: {'autocomplete-field' => true,
-                      'autocomplete-for' => '#_customer_id',
-                      'autocomplete-url' => customers_path(format: :json)
-            } 
-            }) %>
-         <%= f.input :customer_id, as: 'hidden'%>
-         </div>
-      <% end %> 
-         <%= f.input :current_account,  label: "Cuenta corriente"%>
       </div>
-
       <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-      <div class="form-group">
-         <div class="row">
-            <div class="form-group col-md-12 ">
-               <div class="col-md-4">Articles</div>
-               <div class="col-md-1">Cantidad</div>
-               <div class="col-md-2">Precio Unit</div>
-               <div class="col-md-1">Descuento</div>
-               <div class="col-md-2">Precio Total</div>
-            </div>
-            <div class="col-md-12 line2">
-               <%= f.fields_for :orders, method: 'get' do |ph| %>
-                  <%=render 'orders', f: ph  %>
-               <% end %>
-               
-               <%= link_to_add_fields 'Agregar  Item', f , :orders %>
-            </div> 
-         </div>
 
-         <div class ="total_1 pull-right h2">
-                        <h2> Total</h2>
-                        <h2><%=f.input :price_total, label: false, :input_html=> {class: "form-control col-md-2"}, readonly: true, as: :string %></h2>
-                     </div>
-      </div>
-      <div class="form-actions col-md-8">
-         <%= f.submit class: 'btn btn-primary' %>
+
+         <div class="has-error">
+            <%= f.error_notification %>
+         </div>         
+         <div class="col-md-5 search">
+            <%= simple_form_for '', method: 'get' do |f| %>
+
+               <%= f.input( :q, label: 'Clientes', input_html: {
+                  class: 'form-control',
+                  data: {'autocomplete-field' => true,
+                         'autocomplete-for' => '#_customer_id',
+                         'autocomplete-url' => customers_path(format: :json)
+               } 
+               }) %>
+            <%= f.input :customer_id, as: 'hidden'%>
+            <% end %> 
+            </div>
+            <div class="col-md-5">
+               <%= f.input :current_account,  label: "Cuenta corriente"%>
+            </div>
+            <div class="row panel panel-default">
+               <div class=" col-md-12  panel-heading">
+                  <div class="col-md-4 text-center">Articles</div>
+                  <div class="col-md-1 text-center">Cantidad</div>
+                  <div class="col-md-2 text-center">Precio Unit</div>
+                  <div class="col-md-1 text-center">Descuento</div>
+                  <div class="col-md-2 text-center">Precio Total</div>
+               </div>
+               <div class="col-md-12 line2 panel-body">
+                  <%= f.fields_for :orders, method: 'get' do |ph| %>
+                     <%=render 'orders', f: ph  %>
+               <% end %>
+
+                  <%= link_to_add_fields 'Agregar  Item', f , :orders %>
+               </div> 
+            </div>
+
+            <div class ="total_1 pull-right h2">
+               <h2> Total</h2>
+               <h2><%=f.input :price_total, label: false, :input_html=> {class: "form-control col-md-2"}, readonly: true, as: :string %></h2>
+            </div>
+            <div class="form-actions col-md-8">
+               <%= f.submit class: 'btn btn-primary' %>
+            </div>
+         </div>
       </div>
    </div>
-   </div>
-</div>
 <% end %>
