--- a/app/views/invoices/_orders.html.erb
+++ b/app/views/invoices/_orders.html.erb
@@ -3,11 +3,11 @@
       <%= f.input( :name, label: false,  input_html: {
          class: 'form-control ',
          data: {'autocomplete-field' => true,
-                'autocomplete-for' => '#invoice_orders_#{id}_articles_id',
+                'autocomplete-for' => '#invoice_orders_#{id}_article_id',
                 'autocomplete-url' => articles_path(format: :json)
       } 
       }) %>
-   <%= f.input :articles_id, as: :hidden, label: false%>
+   <%= f.input :article_id, :input_html => {class: 'form-control'}, as: :string , label: false%>
       <%= f.input :quantity_stock, as: :hidden , label: false%>
    </div>
    <div class=" col-md-1">
