--- a/app/views/invoices/_orders.html.erb
+++ b/app/views/invoices/_orders.html.erb
@@ -7,7 +7,7 @@
                 'autocomplete-url' => articles_path(format: :json)
       } 
       }) %>
-   <%= f.input :article_id, :input_html => {class: 'form-control'}, as: :string , label: false%>
+   <%= f.input :article_id, :input_html => {class: 'form-control'}, as: :hidden , label: false%>
       <%= f.input :quantity_stock, as: :hidden , label: false%>
    </div>
    <div class=" col-md-1">
