--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -16,6 +16,7 @@
           <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Configuración<b class="caret"></b></a>
           <ul class="dropdown-menu">
             <li><%= link_to "Localidades",locations_path%> </li>
+            <li><%= link_to "Etiquetas",tags_path%> </li>
             <li><%= link_to "Proovedores",suppliers_path%> </li>
              <li class="dropdown-submenu"> 
              <li><%= link_to "Marcas",makes_path%> </li>
