--- a/app/views/layouts/_menu2.html.erb
+++ b/app/views/layouts/_menu2.html.erb
@@ -20,6 +20,7 @@
         <ul class="nav navbar-nav">
           <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Configuración<b class="caret"></b></a>
           <ul class="dropdown-menu">
+            <li><%= link_to "Etiquetas",group_labels_path%> </li>
             <li><%= link_to "Localidades",locations_path%> </li>
             <li><%= link_to "Proovedores",suppliers_path%> </li>
              <li class="dropdown-submenu"> 
