--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -19,8 +19,22 @@
 <div class="container-fluid">
    <div class="row">
       <div class="col-sm-3 col-md-2 sidebar">
-         <%= simple_form_for '', method: 'get' do |f| %>
-            <div class="articulox">
+
+        <%= simple_form_for '', method: 'get' do |f| %>
+          
+          <div class="supplier">
+            <%= f.input( :s, label: 'proveedor',  input_html: {
+               class: 'form-control',
+               data: {'autocomplete-field' => true,
+                      'autocomplete-for' => '#_supplier_id',
+                      'autocomplete-url' =>suppliers_path(format: :json)
+            } 
+            }) %>
+         <%= f.input :supplier_id, as: :hidden%>
+          </div>
+
+
+          <div class="articulox">
             <%= f.input( :q, label: 'Articulos',  input_html: {
                class: 'form-control',
                data: {'autocomplete-field' => true,
