--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -21,7 +21,7 @@
       <div class="col-sm-3 col-md-2 sidebar">
 
         <%= simple_form_for '', method: 'get' do |f| %>
-          
+
           <div class="supplier">
             <%= f.input( :s, label: 'proveedor',  input_html: {
                class: 'form-control',
@@ -30,10 +30,8 @@
                       'autocomplete-url' =>suppliers_path(format: :json)
             } 
             }) %>
-         <%= f.input :supplier_id, as: :hidden%>
+          <%= f.input :supplier_id, input_html: { class: "sup"}, as: :hidden %>
           </div>
-
-
           <div class="articulox">
             <%= f.input( :q, label: 'Articulos',  input_html: {
                class: 'form-control',
@@ -43,10 +41,10 @@
             } 
             }) %>
          <%= f.input :article_id, as: :hidden%>
+       </div>
 
-         </div>
+
       <% end %>
-
             <%= form_tag import_articles_path, multipart: true do %>
                <div>
                <%= file_field_tag :file, class: "import" %>
