--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -30,7 +30,7 @@
                       'autocomplete-url' =>suppliers_path(format: :json)
             } 
             }) %>
-          <%= f.input :supplier_id, input_html: { class: "sup"}, as: :hidden %>
+          <%= f.input :supplier_id,  class: "sup", as: :hidden %>
           </div>
           <div class="articulox">
             <%= f.input( :q, label: 'Articulos',  input_html: {
@@ -42,8 +42,6 @@
             }) %>
          <%= f.input :article_id, as: :hidden%>
        </div>
-
-
       <% end %>
             <%= form_tag import_articles_path, multipart: true do %>
                <div>
