--- a/app/views/invoices/_form.html.erb
+++ b/app/views/invoices/_form.html.erb
@@ -15,7 +15,7 @@
                       'autocomplete-url' =>suppliers_path(format: :json)
             } 
             }) %>
-          <%= f.input :supplier_id,  class: "sup", as: :hidden %>
+          <%= f.input :supplier_id,  class: "sup"%>
         <% end %>
       </div>
       </div>
