--- a/app/views/invoices/_orders.html.erb
+++ b/app/views/invoices/_orders.html.erb
@@ -1,8 +1,8 @@
 <div class="col-md-12 line">
 
   <div class="line2 col-md-4">
-    <%= f.input( :name, label: false,  input_html: {
-      class: 'form-control ',
+    <%= f.input( :name, label: false, auto_focus: true, input_html: {
+      class: 'form-control name ',
       data: {'autocomplete-field' => true,
              'autocomplete-for' => '#invoice_orders_#{id}_article_id',
              'autocomplete-url' => articles_path(format: :json)
@@ -18,10 +18,10 @@
     <%= f.input :unit_price, label: false, as: :string, :input_html => {:class => "form-control"}  %>
   </div>
   <div class=" col-md-1">
-    <%= f.input :discount, label: false, as: :string, :input_html => {:class => "form-control discount "} %>
+    <%= f.input :discount, label: false, as: :string, :input_html => {:class => "form-control discount discount_add "} %>
   </div>
   <div class=" col-md-1">
-    <%= f.input :price_total, label: false, as: :string, :input_html => {:class => "form-control price_subtotal"} %>
+    <%= f.input :price_total, label: false, as: :string, :input_html => {:class => "form-control price_subtotal "} %>
   </div>
   <div class="col-md-1">
     <%if current_user.role == 'Admin' %>
