--- a/app/views/group_labels/_labels.html.erb
+++ b/app/views/group_labels/_labels.html.erb
@@ -1,6 +1,6 @@
 <div class="col-md-12 line3">
   <div class="col-md-4">
-    <%= f.input( :name, label: 'Articulo', as: :string,  input_html: {
+    <%= f.input( :article, label: 'Articulo', as: :string,  input_html: {
       class: 'form-control ',
       data: {'autocomplete-field' => true,
              'autocomplete-for' => '#group_label_labels_#{id}_article_id',
