arreglos articulos search

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -32,7 +32,7 @@
             }) %>
           <%= f.input :supplier_id,  class: "sup", as: :hidden %>
           </div>
-          <div class="articulox">
+          <div class="articulo_search">
             <%= f.input( :q, label: 'Articulos',  input_html: {
                class: 'form-control',
                data: {'autocomplete-field' => true,
